Updates for tags module, better storage and querying.

--- a/src/OrchardCore.Modules/OrchardCore.Tags/OrchardCore.Tags.csproj
+++ b/src/OrchardCore.Modules/OrchardCore.Tags/OrchardCore.Tags.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Fluid.Core" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
 </Project>
